--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <main>
-        <div id="hr"> <img src="pic/hr-img.png" alt=""></div>
+        <div id="hr"> </div>
         <article>
             <div id="m3">
                 <h3 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">chocolate pizza</h3>
@@ -70,58 +70,72 @@
             <div class="cont">
                 <img src="pic/list-bg.png" alt="">
                 <div class="right">
-                    <label class="container"> 11/2cuops milk
+
+                    <div>
                         <input type="checkbox" checked="checked">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">1/2 cups mastink
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">1/2 tsp pink salt
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">1/2 cup brown sugar
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">1 lb black mission
-                        <input type="checkbox" checked="checked">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">2-4 tbsp water
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
+                        <label class="container">11/2 heavy cream </label>
+                    </div>
 
 
-                </div >
+                    <div>
+                        <input type="checkbox" checked="checked">
+                        <label class="container">1/3 granulated sugar </label>
+                    </div>
+
+                    <div>
+                        <input type="checkbox" checked="checked">
+                        <label class="container">2 egge </label>
+                    </div>
+                    <div>
+                        <input type="checkbox" checked="checked">
+                        <label class="container">1 lemon juiced </label>
+                    </div>
+                    <div>
+                        <input type="checkbox" checked="checked">
+                        <label class="container">2 tbs butter </label>
+                    </div>
+                    <div>
+                        <input type="checkbox" checked="checked">
+                        <label class="container">1 1 cup honey roasted </label>
+                    </div>
+
+
+
+
+
+                </div>
+
+
                 <div class="left">
-                    <label class="container">11/2 heavy cream
+                    <div>
                         <input type="checkbox" checked="checked">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">1/3 grand sugar
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">2 egg yolks
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">1 lemon juiced
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">2 tbsp butter
+                        <label class="container">11/2  cups milk </label>
+                    </div>
+
+
+                    <div>
                         <input type="checkbox" checked="checked">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">1 cup honey
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
+                        <label class="container">1/2 tps pink salt </label>
+                    </div>
+
+                    <div>
+                        <input type="checkbox" checked="checked">
+                        <label class="container">1 lb Black mission figo </label>
+                    </div>
+                    <div>
+                        <input type="checkbox" checked="checked">
+                        <label class="container">1/2 cup mascaropne </label>
+                    </div>
+                    <div>
+                        <input type="checkbox" checked="checked">
+                        <label class="container">1 cup browan sugar </label>
+                    </div>
+                    <div>
+                        <input type="checkbox" checked="checked">
+                        <label class="container">4 tbsp water </label>
+                    </div>
+
+
 
 
 
@@ -166,7 +180,7 @@
                 <img src="pic/small-logo.png" alt="">
             </div>
         </div>
-        <h6 style="font-family: Courier New', monospace;">delecius 2013 All rigt reserved</h6>
+        <h6 style="font-family: Courier New', monospace;">delecius &copy 2013 All rigt reserved</h6>
     </footer>
     <script src="js/AP.js"></script>
 </body>
